--- a/BackendWebAPI/BackendWebAPI/Properties/launchSettings.json
+++ b/BackendWebAPI/BackendWebAPI/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:54322",
-      "sslPort": 44397
+      "applicationUrl": "http://localhost:55565",
+      "sslPort": 44307
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ASPnetCoreWebApi": {
+    "BackendWebAPI": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
@@ -32,11 +32,11 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_URLS": "https://+:443;http://+:80",
-        "ASPNETCORE_HTTPS_PORT": "44398"
+        "ASPNETCORE_HTTPS_PORT": "44308"
       },
-      "httpPort": 54324,
+      "httpPort": 55566,
       "useSSL": true,
-      "sslPort": 44398
+      "sslPort": 44308
     }
   }
 }
