--- a/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
+++ b/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
@@ -10,19 +10,26 @@ variables:
   containerRegistry: 'azureuaesaturday-acr'
   containerRegistryURL: 'azureuaesaturday.azurecr.io'
   dockerFilePath: '**/Dockerfile'
+  apiWorkingDirectory: $(Build.SourcesDirectory)/BackendWebAPI
 
 steps:
 
-  - task: Docker@2
-    displayName: Build Docker Image
-    inputs:
-        repository: $(dockerImageName)
-        command: build
-        Dockerfile: $(dockerFilePath)
+#  - task: Docker@2
+#    displayName: Build Docker Image
+#    inputs:
+#        repository: $(dockerImageName)
+#        command: build
+#        Dockerfile: $(dockerFilePath)
+      
 
   - script: |
-        curl -s https://ci-tools.anchore.io/inline_scan-v0.4.1 | bash -s -- -p -r $(dockerImageName)
-    displayName: 'Scan Docker Image for Vulnerabilities'
+      docker build -f $(dockerFilePath) -t $(dockerImageName) .
+    workingDirectory: $(apiWorkingDirectory)
+    
+
+#  - script: |
+#        curl -s https://ci-tools.anchore.io/inline_scan-v0.4.1 | bash -s -- -p -r $(dockerImageName)
+#    displayName: 'Scan Docker Image for Vulnerabilities'
   
   - task: Docker@2
     displayName: Login to ACR
