--- a/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
+++ b/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
@@ -44,9 +44,11 @@ steps:
   - task: Docker@2
     displayName: Push Docker Image
     inputs:
-        repository: $(dockerImageName):$(tag)
+        repository: $(dockerImageName)
         command: push
         containerRegistry: $(containerRegistry)
+        tag: |
+          $(tag)
 
 #  - task: CopyFiles@2
 #    displayName: Copy Anchore Scan Reports
