Fixed tag command in docker push

--- a/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
+++ b/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
@@ -47,7 +47,7 @@ steps:
         repository: $(dockerImageName)
         command: push
         containerRegistry: $(containerRegistry)
-        tag: |
+        tags: |
           $(tag)
 
 #  - task: CopyFiles@2
