--- a/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
+++ b/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
@@ -24,13 +24,18 @@ steps:
       
 
   - script: |
+      docker run --rm -i hadolint/hadolint < $(dockerFilePath)
+    continueOnError: true
+    displayName: Docker Lint
+
+  - script: |
       docker build -f $(dockerFilePath) -t $(dockerImageName):$(tag) .
     workingDirectory: $(apiWorkingDirectory)
-    
+    displayName: Build a docker file 
 
-#  - script: |
-#        curl -s https://ci-tools.anchore.io/inline_scan-v0.4.1 | bash -s -- -p -r $(dockerImageName)
-#    displayName: 'Scan Docker Image for Vulnerabilities'
+  - script: |
+        curl -s https://ci-tools.anchore.io/inline_scan-v0.4.1 | bash -s -- -p -r $(dockerImageName)
+    displayName: 'Scan Docker Image for Vulnerabilities'
   
   - task: Docker@2
     displayName: Login to ACR
