--- a/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
+++ b/BackendWebAPI/BackendWebAPI/backend-api-pipelines.yml
@@ -6,7 +6,7 @@ trigger:
 
 variables:
   vmImageName: 'ubuntu-latest'
-  dockerImageName: 'mobileapi'
+  dockerImageName: 'backendwebapi'
   containerRegistry: 'azureuaesaturday-acr'
   tag: 'v1'
   containerRegistryURL: 'azureuaesaturday.azurecr.io'
@@ -35,7 +35,7 @@ steps:
     displayName: Build a docker file 
 
   - script: |
-        curl -s https://ci-tools.anchore.io/inline_scan-v0.4.1 | bash -s -- -p -r $(dockerImageName)
+        curl -s https://ci-tools.anchore.io/inline_scan-v0.4.1 | bash -s -- -p -r $(dockerImageName):$(tag)
     displayName: 'Scan Docker Image for Vulnerabilities'
   
   - task: Docker@2
